--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
-asd
+.thicc {
+    font-weight: 900;
+}
+
+.italic {
+    font-style: italic;
+}
+table, th, td{
+    border: 1px dashed black;
+    padding: 0.5em;
+}
+h1{
+   font-size: 5em;
+}
+p{
+    font-size: 1.5em;
+}
+a{
+    text-decoration: none;
+    color: black;
+    cursor: default;
+}
+ul{
+    list-style-type: square;
+}
