--- a/Task 3/styles.css
+++ b/Task 3/styles.css
@@ -1,27 +1,53 @@
-.headerImage{
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Festive&display=swap');.headerImage{
     border-radius: 25px;
     transform: rotate(15deg);
     filter: drop-shadow(30px 10px 4px #4444dd);
 }
-
-.header{
+html{
+    background-color: rgb(197, 195, 250);
+}
+header{
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 100px;
     row-gap: 60px;
     flex-direction: column;
+    font-family: 'Festive', cursive;
 }
 
-.gallery{
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
+.galleryImage{
     max-width: 300px;
     max-height: 400px;
 }
 
 .textSection{
+    columns: 3;
+}
+
+main{
     display: flex;
-    justify-content: center;
+}
+footer{
+    text-align: center;
+    background-color: rgb(164, 161, 255);
+}
+
+body{
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Amatic SC', cursive;
+    font-size: 1.5em;
+}
+@media (max-width: 800px){
+    main{
+        flex-direction: column-reverse;
+    }
+    .textSection{
+        columns: 1;
+    }
 }
